--- a/aboutMe.html
+++ b/aboutMe.html
@@ -55,19 +55,19 @@
             </h3>
 
             <h3>
-                &emsp;&emsp;This summer (2017), I am interning at the <a href="http://www.jhuapl.edu" style="color:rgb(255, 215, 51)">Johns Hopkins University Applied Physics Lab</a> as a part of a startup called <strong>synoPTis</strong>.
-                We are currently working on an <strong>Android</strong> and <strong>iOs</strong> mobile
+                &emsp;&emsp;In the summer of 2017, I worked as a Software Engineer for the <a href="http://www.jhuapl.edu" style="color:rgb(255, 215, 51)">Johns Hopkins University Applied Physics Laboratory</a> as a part of a startup called <strong>SynoPTis</strong>.
+                We created a <strong>Hybrid</strong> mobile
                 application to streamline patient records and data
-                for the Johns Hopkins Medical Center. This will hopefully allow physicians to get a quick
-                "synopsis" on their patients to conserve time and energy in thier high stress environment.
-                I am working as a developer on the front end portion of the project, however due to the nature
-                of startups (for which I am very grateful), I have been able to get some direct experience with
+                for the Johns Hopkins Medical Center. The application is still in development, but we hope to allow physicians to get a quick
+                "synopsis" of their patients to conserve time and energy in thier high stress environment.
+                I mostly worked as a developer on the front end portion of the project, however due to the nature
+                of startups (for which I am very grateful), I was able to get some direct experience with
                 our backend using <strong>Google Protobuf</strong> and <strong>Firebase</strong>.  
             </h3>
 
             <h3>
-                &emsp;&emsp;When I'm not working on the synoPTsis app, I work for the Coding School on their 
-                codeConnects project as a Web Developer. (codeConnects is an online 
+                &emsp;&emsp;In the same summer (2017) and through my sophomore year of college, I worked for the Coding School on their 
+                codeConnects project as a Web Developer and Curriculum Contributor. (codeConnects is an online 
                 platform that offers one-on-one computer science instruction and mentorship to underrepresented
                 middle and high school students. Pairing each student with a professional software engineer
                 or university student majoring in computer science, students participate in weekly,
@@ -75,6 +75,13 @@
                 features.) The Coding School (TCS) is a 501c3 organization that aims to empower the
                 next generation through computer science education. You can find their website
                 <a href="http://the-cs.org/#/" style="color:rgb(255, 215, 51)">here</a>.
+            </h3>
+		    
+	    <h3>
+                &emsp;&emsp;This past summed (2018), I worked as a Software Engineer for <strong>Qualcomm</strong>. I was an intern on the Audio Software Team,
+		 working to implement a more power effecient solution for <strong>Microsoft's Cortana Voice Activation</strong> feature (using the Qualcomm Chipset).
+		 I was able to complete the project on time, and the software will be used on <strong>1000s of devices</strong> with every new product release. The
+		 specific product using this qualcomm chipset (and my software) is for Microsoft's new line of "Always Connected PCs".
             </h3>
 		    
             <center>
