--- a/aboutMe.html
+++ b/aboutMe.html
@@ -46,7 +46,6 @@
                 to art created with algorithmic programming in JavaScript. I firmly believe
                 in <strong>learning by doing</strong> and taking education into your own hands.
             </h3>
-            <br>
 
 		                <h3>
                 &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying 
@@ -66,19 +65,19 @@
             </h3>
 
             <h3>
-                &emsp;&emsp;In the same summer (2017) and through my sophomore year of college, I worked for the Coding School on their 
+                &emsp;&emsp;In the same summer (2017) and through my sophomore year of college, I worked for <a href="http://the-cs.org/#/" style="color:rgb(255, 215, 51)">The Coding School</a> on their 
                 codeConnects project as a Web Developer and Curriculum Contributor. (codeConnects is an online 
                 platform that offers one-on-one computer science instruction and mentorship to underrepresented
                 middle and high school students. Pairing each student with a professional software engineer
                 or university student majoring in computer science, students participate in weekly,
                 face-to-face coding lessons using our platforms’ collaborative editing and video chat
                 features.) The Coding School (TCS) is a 501c3 organization that aims to empower the
-                next generation through computer science education. You can find their website
-                <a href="http://the-cs.org/#/" style="color:rgb(255, 215, 51)">here</a>.
+                next generation through computer science education.
+                
             </h3>
 		    
 	    <h3>
-                &emsp;&emsp;This past summed (2018), I worked as a Software Engineer for <strong>Qualcomm</strong>. I was an intern on the Audio Software Team,
+                &emsp;&emsp;This past summed (2018), I worked as a Software Engineer for <a href="https://www.qualcomm.com" style="color:rgb(255, 215, 51)">Qualcomm</a> I was an intern on the Audio Software Team,
 		 working to implement a more power effecient solution for <strong>Microsoft's Cortana Voice Activation</strong> feature (using the Qualcomm Chipset).
 		 I was able to complete the project on time, and the software will be used on <strong>1000s of devices</strong> with every new product release. The
 		 specific product using this qualcomm chipset (and my software) is for Microsoft's new line of "Always Connected PCs".
