--- a/aboutMe.html
+++ b/aboutMe.html
@@ -103,11 +103,12 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
                         <ul>
-                            <li><strong>Computer Science:</strong> C/C++, Java, Python, Terminal, JavaScript (p5), 
-                            Ionic3 (cross-platform framework), Angular, HTML (W3C), CSS and SCSS, XML, Android Studio, 
-                            Eclipse (IDE), Xcode (IDE), Firebase, Google Protobuf, MongoDB, Mailchimp, Brackets, Trello</li>
-                            <li><strong>Technologies:</strong> Android, iOS</li>
-                            <li><strong>Git</strong> (Github, Gitlab, and Bitbucket)</li>
+                            <li><strong>Programming Languages:</strong> C and C++ (intermediate), Python (intermediate), 
+				    Java & JUnit (intermediate), Assembly: 6502, MIPS, x86 (basic),  
+				    HTML/CSS/JavaScript (intermediate) </li>
+                            <li><strong>Technologies:</strong> Technologies: Git (intermediate), Maya with MEL (intermediate), 
+				    Ionic/React (intermediate), Git (intermediate), AWS (basic), MySQL (basic) </li>
+                            <li><strong>Spoken Languages</strong> English (native), Spanish (intermediate), High Valyrian (basic) </li>
                         </ul> 
                     </h3>
                 </div>
@@ -120,7 +121,7 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px; font-weight:900">
                         <ul>
-                            <li><strong>Spoken Languages:</strong> English (native speaker), Spanish (functional), Russian (functional, German (functional), High Valyrian (functional)</li>
+                            <li><strong>Spoken Languages:</strong> English (native speaker), Spanish (intermediate), High Valyrian (basic)</li>
                             <li>Marketing</li>
                             <li>Business Analysis</li>
                             <li>3D Printing Technology</li>
@@ -141,6 +142,9 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
                         <ul>
+
+			    <li>Qualcomm Student Accelerator Attendee, Speaker 2018</li>
+			    <li>California State Seal of Biliteracy Spanish 2016</li>
                             <li>Top Ten: Wash. D.C. Google Games 2017</li>
                             <li>HopHacks Finalist (Top Ten), Fall 2017</li>
                         </ul>
