--- a/aboutMe.html
+++ b/aboutMe.html
@@ -84,7 +84,7 @@
             </h3>
 		    
             <center>
-            <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf">
+            <a target="_blank" href="https://drive.google.com/file/d/1PjQ0psug_0-vj9kj1IxY87hPpQpl9viw/view?usp=sharing">
             <button class="button button1">
                 <i class="fa fa-file-text-o"></i>Résumé
             </button> 
