--- a/aboutMe.html
+++ b/aboutMe.html
@@ -106,7 +106,7 @@
                             <li><strong>Programming Languages:</strong> C and C++ (intermediate), Python (intermediate), 
 				    Java & JUnit (intermediate), Assembly: 6502, MIPS, x86 (basic),  
 				    HTML/CSS/JavaScript (intermediate) </li>
-                            <li><strong>Technologies:</strong> Technologies: Git (intermediate), Maya with MEL (intermediate), 
+                            <li><strong>Technologies:</strong> Maya with MEL (intermediate), 
 				    Ionic/React (intermediate), Git (intermediate), AWS (basic), MySQL (basic) </li>
                             <li><strong>Spoken Languages</strong> English (native), Spanish (intermediate), High Valyrian (basic) </li>
                         </ul> 
