--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			
+			<script type="text/javascript">
+			var _userway_config = {
+			account: 'YyYPsv2XoC'
+			};
+			</script>
+			<script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
 	</body>
 </html>
