--- a/accessibility.html
+++ b/accessibility.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
-	<body>
+	<body style="padding:5%">
 <br /><br />
 
 Updated: October 2019.
