--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 <br>
 <br>
         <div style="padding:7%">
-            <img align="left" src="images/logo.jpg" class="pads" width="30%">
+            <img align="left" src="images/lichess.png" class="pads" width="30%">
             <h2>Xchange <span style="color:gold"><i class="fa fa-tag" aria-hidden="true"></i> Business Plan Competition</span></h2>
             <p style="color:white">I have been playing a lot of chess in the past few months so I looked into making a chess AI. I found a tutorial online and went from there. The Official Chess Programming Wiki was most helpful. The code can be found <a target="https://github.com/amrojas/Xchange" style="color:rgb(255, 215, 51);">here</a>.
 
