--- a/watercolor.html
+++ b/watercolor.html
@@ -2,7 +2,7 @@
 <html>
     
 	<head>
-		<title>Reece W. Griffith | Projects</title>
+		<title>Reece W. Griffith | Watercolor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +12,7 @@
 
     <header id="header">					
         <h1><strong>Artist Report</strong></h1>
-        <h2><strong>Thomas Ronawldson</strong>.</h2>
+        <h2><strong>Thomas Rowlandson</strong>.</h2>
     </header>
 	
 	
